[tool.poetry]
name = "requests-test"
version = "0.1.0"
description = ""
authors = ["JanGodar <2017sofin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = {extras = ["socks"], version = "^2.32.3"}
fake-useragent = "^1.5.1"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
